fix: Widget control on dashboard chart breaks on smaller screens
(cherry picked from commit 3bbf423093505299bf40e7acdd05ef35c3c66227)

--- a/frappe/public/scss/desk/desktop.scss
+++ b/frappe/public/scss/desk/desktop.scss
@@ -229,12 +229,19 @@ body {
 		.widget-head {
 			padding: var(--padding-sm);
 			position: relative;
+			@media (max-width: 1300px) {
+				display: grid;
+			}
 		}
 
 		.widget-control {
-			position: absolute;
+			position: inherit;
 			right: var(--margin-sm);
 			top: var(--padding-sm);
+			@media (min-width: 1300px) {
+				top: auto;
+			}
+
 		}
 
 		.chart-loading-state {
